--- a/Ultralight Demo/Ultralight Demo.vcxproj
+++ b/Ultralight Demo/Ultralight Demo.vcxproj
@@ -72,12 +72,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)PrecompiledHeader;$(SolutionDir)ThirdParty\Ultralight\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)ThirdParty\Ultralight\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)PrecompiledHeader;$(SolutionDir)ThirdParty\Ultralight\inc;$(SolutionDir)ThirdParty\DirectXTex\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)ThirdParty\Ultralight\lib;$(SolutionDir)ThirdParty\DirectXTex\lib\$(Configuration)\;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(ProjectDir)PrecompiledHeader;$(SolutionDir)ThirdParty\Ultralight\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)ThirdParty\Ultralight\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)PrecompiledHeader;$(SolutionDir)ThirdParty\Ultralight\inc;$(SolutionDir)ThirdParty\DirectXTex\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)ThirdParty\Ultralight\lib;$(SolutionDir)ThirdParty\DirectXTex\lib\$(Configuration)\;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -121,7 +121,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d11.lib;D3DCompiler.lib;Dwrite.lib;dxguid.lib;DXGI.lib;AppCore.lib;Ultralight.lib;UltralightCore.lib;WebCore.lib;Shlwapi.lib;Dwmapi.lib;UxTheme.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;D3DCompiler.lib;Dwrite.lib;dxguid.lib;DXGI.lib;AppCore.lib;Ultralight.lib;UltralightCore.lib;WebCore.lib;Shlwapi.lib;Dwmapi.lib;UxTheme.lib;DirectXTex.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy /Y "$(SolutionDir)ThirdParty\Ultralight\bin\Ultralight.dll" "$(TargetDir)Ultralight.dll"
@@ -147,7 +147,7 @@ copy /Y "$(SolutionDir)ThirdParty\Ultralight\bin\WebCore.dll" "$(TargetDir)WebCo
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d11.lib;D3DCompiler.lib;Dwrite.lib;dxguid.lib;DXGI.lib;AppCore.lib;Ultralight.lib;UltralightCore.lib;WebCore.lib;Shlwapi.lib;Dwmapi.lib;UxTheme.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;D3DCompiler.lib;Dwrite.lib;dxguid.lib;DXGI.lib;AppCore.lib;Ultralight.lib;UltralightCore.lib;WebCore.lib;Shlwapi.lib;Dwmapi.lib;UxTheme.lib;DirectXTex.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy /Y "$(SolutionDir)ThirdParty\Ultralight\bin\Ultralight.dll" "$(TargetDir)Ultralight.dll"
@@ -156,8 +156,16 @@ copy /Y "$(SolutionDir)ThirdParty\Ultralight\bin\WebCore.dll" "$(TargetDir)WebCo
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Demos\DemoBasic.cpp" />
-    <ClCompile Include="Demos\DemoInspector.cpp" />
+    <ClCompile Include="Demos\DemoBasic\DemoBasic.cpp" />
+    <ClCompile Include="Demos\DemoBorderlessResizableMovable\DemoBorderlessResizableMovable.cpp" />
+    <ClCompile Include="Demos\DemoBorderlessResizable\DemoBorderlessResizable.cpp" />
+    <ClCompile Include="Demos\DemoCPPTextureInBrowser\CustomFileSystem\CustomFileSystem.cpp" />
+    <ClCompile Include="Demos\DemoCPPTextureInBrowser\CustomGPUImpl\CustomGPUImpl.cpp" />
+    <ClCompile Include="Demos\DemoCPPTextureInBrowser\DemoCPPTextureInBrowser.cpp" />
+    <ClCompile Include="Demos\DemoFileBrowser\DemoFileBrowser.cpp" />
+    <ClCompile Include="Demos\DemoInspector\DemoInspector.cpp" />
+    <ClCompile Include="Demos\DemoOpenFileDialog\DemoOpenFileDialog.cpp" />
+    <ClCompile Include="Demos\DemoTransparent\DemoTransparent.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Graphics\Buffer\ConstantBuffer.cpp" />
     <ClCompile Include="Graphics\Buffer\IndexBuffer.cpp" />
@@ -211,6 +219,7 @@ copy /Y "$(SolutionDir)ThirdParty\Ultralight\bin\WebCore.dll" "$(TargetDir)WebCo
     <ClCompile Include="UltralightImpl\UltralightView.cpp" />
     <ClCompile Include="UltralightImpl\ViewListeners\HtmlViewListener.cpp" />
     <ClCompile Include="UltralightImpl\ViewListeners\HtmlViewLoadListener.cpp" />
+    <ClCompile Include="Window\InputController\InputController.cpp" />
     <ClCompile Include="Window\InputController\Keyboard.cpp" />
     <ClCompile Include="Window\InputController\KeyboardEvent.cpp" />
     <ClCompile Include="Window\InputController\Mouse.cpp" />
@@ -220,9 +229,17 @@ copy /Y "$(SolutionDir)ThirdParty\Ultralight\bin\WebCore.dll" "$(TargetDir)WebCo
     <ClCompile Include="Window\WindowHelperForBorderlessResizable.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Demos\DemoBasic.h" />
-    <ClInclude Include="Demos\DemoInspector.h" />
+    <ClInclude Include="Demos\DemoBasic\DemoBasic.h" />
+    <ClInclude Include="Demos\DemoBorderlessResizableMovable\DemoBorderlessResizableMovable.h" />
+    <ClInclude Include="Demos\DemoBorderlessResizable\DemoBorderlessResizable.h" />
+    <ClInclude Include="Demos\DemoCPPTextureInBrowser\CustomFileSystem\CustomFileSystem.h" />
+    <ClInclude Include="Demos\DemoCPPTextureInBrowser\CustomGPUImpl\CustomGPUImpl.h" />
+    <ClInclude Include="Demos\DemoCPPTextureInBrowser\DemoCPPTextureInBrowser.h" />
+    <ClInclude Include="Demos\DemoFileBrowser\DemoFileBrowser.h" />
+    <ClInclude Include="Demos\DemoInspector\DemoInspector.h" />
+    <ClInclude Include="Demos\DemoOpenFileDialog\DemoOpenFileDialog.h" />
     <ClInclude Include="Demos\Demos.h" />
+    <ClInclude Include="Demos\DemoTransparent\DemoTransparent.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Graphics\Buffer\ConstantBuffer.h" />
     <ClInclude Include="Graphics\Buffer\ConstantBufferType.h" />
@@ -251,6 +268,7 @@ copy /Y "$(SolutionDir)ThirdParty\Ultralight\bin\WebCore.dll" "$(TargetDir)WebCo
     <ClInclude Include="PrecompiledHeader\StringConverter.h" />
     <ClInclude Include="UltralightImpl\EZJSParm.h" />
     <ClInclude Include="UltralightImpl\GPUimpl\GPUDriverD3D11.h" />
+    <ClInclude Include="UltralightImpl\GPUimpl\IGPUDriverD3D11.h" />
     <ClInclude Include="UltralightImpl\impl\ClipboardWin.h" />
     <ClInclude Include="UltralightImpl\impl\FileSystemWin.h" />
     <ClInclude Include="UltralightImpl\impl\FontLoaderWin.h" />
