--- a/Ultralight Demo/Ultralight Demo.vcxproj.filters
+++ b/Ultralight Demo/Ultralight Demo.vcxproj.filters
@@ -225,6 +225,12 @@
     <ClCompile Include="Demos\DemoMultipleCubesEmbedded\DemoMultipleCubesEmbedded.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Demos\DemoScreenShareHelper\DemoScreenShareHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Demos\DemoScreenShareHelper\ScreenCapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PrecompiledHeader\ErrorHandler.h">
@@ -483,6 +489,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Demos\DemoMultipleCubesEmbedded\DemoMultipleCubesEmbedded.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Demos\DemoScreenShareHelper\DemoScreenShareHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Demos\DemoScreenShareHelper\ScreenCapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
