--- a/Ultralight Demo/Ultralight Demo.vcxproj
+++ b/Ultralight Demo/Ultralight Demo.vcxproj
@@ -172,6 +172,8 @@ xcopy /E /I /Y /Q /D "$(SolutionDir)ThirdParty\Ultralight\resources" "$(TargetDi
     <ClCompile Include="Demos\DemoMultipleCubesEmbedded\DemoMultipleCubesEmbedded.cpp" />
     <ClCompile Include="Demos\DemoOpenFileDialog\DemoOpenFileDialog.cpp" />
     <ClCompile Include="Demos\DemoOverlayedCPPTextureOnDiv\DemoOverlayedCPPTextureOnDiv.cpp" />
+    <ClCompile Include="Demos\DemoScreenShareHelper\DemoScreenShareHelper.cpp" />
+    <ClCompile Include="Demos\DemoScreenShareHelper\ScreenCapper.cpp" />
     <ClCompile Include="Demos\DemoSelector\DemoSelector.cpp" />
     <ClCompile Include="Demos\DemoTransparent\DemoTransparent.cpp" />
     <ClCompile Include="Engine.cpp" />
@@ -262,6 +264,8 @@ xcopy /E /I /Y /Q /D "$(SolutionDir)ThirdParty\Ultralight\resources" "$(TargetDi
     <ClInclude Include="Demos\DemoOpenFileDialog\DemoOpenFileDialog.h" />
     <ClInclude Include="Demos\DemoOverlayedCPPTextureOnDiv\DemoOverlayedCPPTextureOnDiv.h" />
     <ClInclude Include="Demos\Demos.h" />
+    <ClInclude Include="Demos\DemoScreenShareHelper\DemoScreenShareHelper.h" />
+    <ClInclude Include="Demos\DemoScreenShareHelper\ScreenCapper.h" />
     <ClInclude Include="Demos\DemoSelector\DemoSelector.h" />
     <ClInclude Include="Demos\DemoTransparent\DemoTransparent.h" />
     <ClInclude Include="Engine.h" />
